main/default/objects/Training_Plan_Access_Request__c/Training_Plan_Access_Request__c.object-meta.xml
<CustomObject>
    <label>Training Plan Access Request</label>
    <nameField>
        <displayFormat>TPAR-{0000000}</displayFormat>
        <label>Training Plan Access Request Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Training Plan Access Requests</pluralLabel>
    <sharingModel>Private</sharingModel>
</CustomObject>