main/default/objects/Training_Plan_Access_Request__c/fields/Status__c.field-meta.xml
<CustomField>
    <fullName>Status__c</fullName>
    <label>Status</label>
    <picklist>
        <picklistValues>
            <fullName>Pending</fullName>
            <default>true</default>
        </picklistValues>
        <picklistValues>
            <fullName>Approved</fullName>
        </picklistValues>
        <picklistValues>
            <fullName>Rejected</fullName>
        </picklistValues>
    </picklist>
    <type>Picklist</type>
</CustomField>