main/default/objects/Training_Plan_Access_Request__c/fields/Training_Plan__c.field-meta.xml
<CustomField>
    <fullName>Training_Plan__c</fullName>
    <deleteConstraint>Restrict</deleteConstraint>
    <label>Training Plan</label>
    <referenceTo>Training_Plan__c</referenceTo>
    <relationshipLabel>Training Plan Access Requests</relationshipLabel>
    <relationshipName>Training_Plan_Access_Requests</relationshipName>
    <type>Lookup</type>
</CustomField>