main/default/objects/Training_Plan_Access_Request__c/fields/User__c.field-meta.xml
<CustomField>
    <fullName>User__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>User</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Training_Plan_Access_Requests</relationshipName>
    <type>Lookup</type>
</CustomField>